# conveyances_app

./: .gitignore  README.md  codecov.yml
.github/workflows/: accounts-coverage.yaml  accounts-django.yaml  accounts-docker-ci.yaml  accounts-ruff.yaml  conveyances-coverage.yaml  conveyances-django.yaml  conveyances-docker-ci.yaml  conveyances-ruff.yaml
accounts/: .env_example  Dockerfile  README.md  pyproject.toml  pytest.ini
accounts/.github/workflows/: coverage.yaml  docker-ci.yaml
accounts/core/: settings.py
conveyances/: .env_example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
conveyances/.github/workflows/: coverage.yaml
conveyances/conveyances/: apps.py  tests.py
conveyances/core/: settings.py
