[project]
name = "conveyances"
version = "0.1.0"
description = "A conveyances app built with Django and MongoDB."
authors = [
    {name = "Anna Makarudze",email = "anna@djangogirls.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.2)",
    "djangorestframework (==3.16.1)",
    "djangorestframework-simplejwt (==5.5.1)",
    "django-mongodb-backend (==5.2.1)",
    "python-dotenv (==1.1.1)",
    "gunicorn (==23.0.0)",
    "django-cors-headers (==4.9.0)",
    "dj-database-url (==3.0.1)"
]

[dependency-groups]
dev = [
    "pytest (==8.4.2)",
    "coverage (==7.10.7)",
    "pytest-cov (==7.0.0)",
    "pytest-dotenv (==0.5.2)",
    "pytest-django (==4.11.1)",
    "ruff (==0.14.0)",
    "pre-commit (==4.3.0)",
    "black (==25.9.0)",
    "selenium (==4.36.0)",
    "pytest-selenium (==4.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
